--- a/package.json
+++ b/package.json
@@ -10,8 +10,11 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "discord-giveaways": "^6.0.1",
     "discord.js": "^14.14.1",
+    "djs-commander": "^0.0.50",
     "dotenv": "^16.3.1",
-    "mongoose": "^8.0.3"
+    "mongoose": "^8.0.3",
+    "ms": "^2.1.3"
   }
 }
