--- a/src/config.json
+++ b/src/config.json
@@ -1,5 +1,8 @@
 {
     "testServer": "840948801179090944",
     "clientId": "1186362076084568074",
-    "devs": ["329327968369246210"]
+    "devs": ["329327968369246210"],
+    "everyoneMention": false,
+    "hostedBy": true,
+    "guildId": "840948801179090944"
 }
